--- a/day-1/index.html
+++ b/day-1/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <table border="1px" height="500" width="500">
+        <tr>
+            <td>
+
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
