--- a/day-1/index.html
+++ b/day-1/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <table border="1px" height="500" width="500">
+    <table border="1px" height="500" width="500" align="center">
         <tr>
             <td>
 
