--- a/day-1/index.html
+++ b/day-1/index.html
@@ -8,13 +8,41 @@
 <body>
     <table border="1px" height="500" width="500" align="center">
         <tr>
-            <td></td>
-            <td></td>
+            <td colspan="2"></td>
+            <!-- <td></td> -->
         </tr>
         <tr>
             <td></td>
             <td></td>
         </tr>
     </table>
+<br>
+<table border="1px" height="500" width="500" align="center">
+    <tr bgcolor="white">
+        <td></td>
+    </tr>
+    <tr bgcolor="red">
+        <td></td>
+    </tr>
+    <tr bgcolor="black">
+        <td></td>
+    </tr>
+    <tr bgcolor="orange">
+        <td></td>
+    </tr>
+</table>
+<br>
+<table border="1px" height="500" width="500" align="center">
+    <tr>
+        <td colspan="2"></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td colspan="2"></td>
+    </tr>
+</table>
 </body>
 </html>
