--- a/day-1/index.html
+++ b/day-1/index.html
@@ -33,15 +33,30 @@
 </table>
 <br>
 <table border="1px" height="500" width="500" align="center">
-    <tr>
+    <tr height="100">
         <td colspan="2"></td>
     </tr>
-    <tr>
+    <tr height="350">
         <td></td>
         <td></td>
     </tr>
-    <tr>
+    <tr height="50">
         <td colspan="2"></td>
+    </tr>
+</table>
+<br>
+<table border="1px" height="500" width="500" align="center">
+    <tr height="100">
+        <td colspan="1" width="100"></td>
+        <td colspan="2" width="400"></td>
+    </tr>
+    <tr height="350">
+        <td colspan="1" width="100"></td>
+        <td colspan="1" width="300"></td>
+        <td colspan="1" width="100"></td>
+    </tr>
+    <tr height="50">
+        <td colspan="3"></td>
     </tr>
 </table>
 </body>
