--- a/day-3/contact.html
+++ b/day-3/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>Contact</title>
 </head>
 <body>
     <table border="1px" height="1000" width="90%" align="center">
@@ -22,7 +22,7 @@
                         <td width="100%">
                             <table border="1" height="250" width="100%">
                                 <tr height="75">
-                                    <td width="20%"> Home</td>
+                                    <td width="20%"> <a href="index.html">Home</a></td>
                                     <td width="20%"> <a href="about.html"> About</a></td>
                                     <td width="20%"> <a href="service.html">Services</a></td>
                                     <td width="20%"> <a href="portfolio.html">Portfolio</a></td>
