--- a/day-3/portfolio.html
+++ b/day-3/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>Services</title>
 </head>
 <body>
     <table border="1px" height="1000" width="90%" align="center">
