--- a/day-3/about.html
+++ b/day-3/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>About</title>
 </head>
 <body>
     <table border="1px" height="1000" width="90%" align="center">
@@ -28,6 +28,7 @@
                                     <td width="20%"> <a href="portfolio.html">Portfolio</a></td>
                                     <td width="20%"> <a href="contact.html">Contact</a></td>
                                 </tr>
+<!--  
                                 <tr height="175"> 
                                     <td colspan="5">
                                         <table border="1" height="175" width="100%">
@@ -37,7 +38,8 @@
                                             </tr>
                                         </table>
                                     </td>
-                                </tr>
+                                </tr> -->
+                                <!-- slider section end -->
                             </table>
                         </td>
                     </tr>
