--- a/day-3/index.html
+++ b/day-3/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <table border="1px" height="1000" width="90%" align="center">
+        <!-- Head logo section start -->
         <tr height="100">
             <td width="20%">
                 <img src="images/logo.svg"alt="image not found">
@@ -15,12 +16,15 @@
                 <img src="images/banner.jpg" height="100" width="100%">
             </td>
         </tr>
+        <!-- Head logo section end -->
         <tr height="850">
             <td colspan="2" width="100%">
                 <table border="1" height="850" width="100%">
                     <tr height="250">
                         <td width="100%">
                             <table border="1" height="250" width="100%">
+                                 <!-- navigation section start -->
+
                                 <tr height="75">
                                     <td width="20%"> Home</td>
                                     <td width="20%"> <a href="about.html"> About</a></td>
@@ -28,6 +32,9 @@
                                     <td width="20%"> <a href="portfolio.html">Portfolio</a></td>
                                     <td width="20%"> <a href="contact.html">Contact</a></td>
                                 </tr>
+                                <!-- navigation section end -->
+
+                                <!-- slider section -->
                                 <tr height="175"> 
                                     <td colspan="5">
                                         <table border="1" height="175" width="100%">
@@ -38,9 +45,12 @@
                                         </table>
                                     </td>
                                 </tr>
+                                <!-- slider section end -->
                             </table>
                         </td>
                     </tr>
+
+                    <!-- mission & vission section start -->
                     <tr height="600">
                         <td width="100%">
                             <table border="1" height="600" width="100%">
@@ -48,12 +58,13 @@
                                     <td colspan="2"> Mission & Vission</td>
                                 </tr>
                                 <tr height="550">
-                                    <td width="20%"> Mission</td>
+                                    <td width="20%"><img src="images/service.svg" alt="" height="100" width="100%"></td>
                                     <td width="80%"> Vission</td>
                                 </tr>
                             </table>
                         </td>
                     </tr>
+                    <!-- mission & vission section start -->
                 </table>
             </td>
         </tr>
