--- a/day-3/index.html
+++ b/day-3/index.html
@@ -64,7 +64,7 @@
                             </table>
                         </td>
                     </tr>
-                    <!-- mission & vission section start -->
+                    <!-- mission & vission section end -->
                 </table>
             </td>
         </tr>
