--- a/day-3/index.html
+++ b/day-3/index.html
@@ -17,15 +17,15 @@
             </td>
         </tr>
         <!-- Head logo section end -->
-        <tr height="850">
+        <tr height="500">
             <td colspan="2" width="100%">
-                <table border="1" height="850" width="100%">
-                    <tr height="250">
+                <table border="1" height="500" width="100%">
+                    <tr height="300">
                         <td width="100%">
-                            <table border="1" height="250" width="100%">
+                            <table border="1" height="300" width="100%">
                                  <!-- navigation section start -->
 
-                                <tr height="75">
+                                <tr height="50">
                                     <td width="20%"> Home</td>
                                     <td width="20%"> <a href="about.html"> About</a></td>
                                     <td width="20%"> <a href="service.html">Services</a></td>
@@ -35,11 +35,11 @@
                                 <!-- navigation section end -->
 
                                 <!-- slider section -->
-                                <tr height="175"> 
+                                <tr height="250"> 
                                     <td colspan="5">
-                                        <table border="1" height="175" width="100%">
+                                        <table border="1" height="250" width="100%">
                                             <tr height="175">
-                                                <td width="60%"> Slider image</td>
+                                                <td width="60%"> <img src="images/slider-1.jpg" alt="" width="100%" height="250"></td>
                                                 <td width="40%"> Content</td>
                                             </tr>
                                         </table>
@@ -51,15 +51,15 @@
                     </tr>
 
                     <!-- mission & vission section start -->
-                    <tr height="600">
+                    <tr height="200">
                         <td width="100%">
-                            <table border="1" height="600" width="100%">
+                            <table border="1" height="200" width="100%">
                                 <tr> 
                                     <td colspan="2"> Mission & Vission</td>
                                 </tr>
-                                <tr height="550">
-                                    <td width="20%"><img src="images/service.svg" alt="" height="100" width="100%"></td>
-                                    <td width="80%"> Vission</td>
+                                <tr height="150">
+                                    <td width="50%">mission</td>
+                                    <td width="50%"> Vission</td>
                                 </tr>
                             </table>
                         </td>
@@ -68,8 +68,19 @@
                 </table>
             </td>
         </tr>
-        <tr height="50">
-            <td colspan="2" width="100%"></td>
+        <!-- benefits of members -->
+        <tr height="400">
+            <td width="100%" colspan="2">
+                <table border="1" height="400" width="100%">
+                    <tr height="50">
+                        <td colspan="2" width="100%"> Benefits of Members </td>
+                    </tr>
+                    <tr height="350">
+                        <td width="35%">list</td>
+                        <td width="65%">image</td>
+                    </tr>
+                </table>
+            </td>
         </tr>
     </table>
 </body>
