--- a/day-3/index.html
+++ b/day-3/index.html
@@ -39,8 +39,13 @@
                                     <td colspan="5">
                                         <table border="1" height="250" width="100%">
                                             <tr height="175">
-                                                <td width="60%"> <img src="images/slider-1.jpg" alt="" width="100%" height="250"></td>
-                                                <td width="40%"> Content</td>
+                                                <td width="60%"> <img src="images/slider-1.jpg" alt="image not found" width="100%" height="250"></td>
+                                                <td width="40%"> 
+                                                    <h3>SaaS Products Showcasing</h3>
+                                                    <p>The SaaS model is a new ray of hope for SME entrepreneurs. Digitization gives entrepreneurs the opportunity to reap the financial benefits of low capital investment. BASIS has taken the initiative to develop the SaaS model among local SME entrepreneurs. Using the SaaS model, SME entrepreneurs can access the software for free for a month by visiting the link https://saas.basis.org.bd/</p>
+
+                                                    <button>Get started -> </button>
+                                                    </td>
                                             </tr>
                                         </table>
                                     </td>
@@ -53,13 +58,23 @@
                     <!-- mission & vission section start -->
                     <tr height="200">
                         <td width="100%">
-                            <table border="1" height="200" width="100%">
+                            <table height="200" width="100%">
                                 <tr> 
-                                    <td colspan="2"> Mission & Vission</td>
+                                    <td colspan="2" height="25">
+                                        <h1 align="center">
+                                            <u>Mission & Vision</u>
+                                        </h1>
+                                    </td>
                                 </tr>
-                                <tr height="150">
-                                    <td width="50%">mission</td>
-                                    <td width="50%"> Vission</td>
+                                <tr height="175" align="center">
+                                    <td width="50%">
+                                        <h2 >Mission</h2>
+                                        <p>To develop the ambition, capacity and sustainable growth of the BASIS member companies, and to lead and deliver the BASIS contribution to Smart Bangladesh.</p>
+                                    </td>
+                                    <td width="50%">
+                                        <h2>Vision</h2>
+                                        <p>To lead the development of a vibrant, sustainable and successful software and IT service industry in Bangladesh.</p>
+                                    </td>
                                 </tr>
                             </table>
                         </td>
@@ -71,13 +86,35 @@
         <!-- benefits of members -->
         <tr height="400">
             <td width="100%" colspan="2">
-                <table border="1" height="400" width="100%">
+                <table height="400" width="100%">
                     <tr height="50">
-                        <td colspan="2" width="100%"> Benefits of Members </td>
+                        <td colspan="3" width="100%"> 
+                            <h3>Benefits of Members</h3>
+                            </ul>
+                        </td>
                     </tr>
                     <tr height="350">
-                        <td width="35%">list</td>
-                        <td width="65%">image</td>
+                        <td width="35%">
+                            <ul type="squre">
+                            <li>Advocacy for Software & ITES</li>
+                            <li>Corporate Tax Exemption</li>
+                            <li>Network Possibilities</li>
+                            <li>Recommendation of Trained Human Resources</li>
+                            <li>Access to programmes and projects</li>
+                            <li>Seminars and Workshops</li>
+                            <li>Training Courses</li>
+                            <li>Discounted Rates for Event Participation</li>
+                            <li>Office Space in STP-1</li>
+                            </ul>
+                            <button> Read More..</button>
+                            </td>
+                        <td width="35%" align="center">
+                            <h1>BECOME A</h1>
+                            <h1>MEMBER</h1>
+                        </td>
+                        <td width="30%">
+                            <button>Apply Now</button>
+                        </td>
                     </tr>
                 </table>
             </td>
