--- a/day-3/index.html
+++ b/day-3/index.html
@@ -84,16 +84,16 @@
             </td>
         </tr>
         <!-- benefits of members -->
-        <tr height="400">
+        <tr height="200">
             <td width="100%" colspan="2">
-                <table height="400" width="100%">
+                <table height="200" width="100%">
                     <tr height="50">
                         <td colspan="3" width="100%"> 
                             <h3>Benefits of Members</h3>
                             </ul>
                         </td>
                     </tr>
-                    <tr height="350">
+                    <tr height="150">
                         <td width="35%">
                             <ul type="squre">
                             <li>Advocacy for Software & ITES</li>
@@ -119,6 +119,15 @@
                 </table>
             </td>
         </tr>
+         <!-- benefits of members end-->
+         <!-- service section start -->
+
+        <tr height="200">
+            
+        </tr>
+
+
+
     </table>
 </body>
 </html>
