--- a/day-3/index.html
+++ b/day-3/index.html
@@ -123,7 +123,41 @@
          <!-- service section start -->
 
         <tr height="200">
-            
+            <td colspan="2" width="100%">
+                <table height="200" width="100%">
+                    <tr height="25" align="center">
+                        <td width="100%"> <h1>Our Service</h1> </td>
+                    </tr>
+                    <tr height="175">
+                        <td width="100%"> 
+                            <table height="175" width="100%" cellspacing="20" align="center">
+                                <tr height="85">
+                                    <td>
+                                        <h1>BASIS-BRAC BANK CO-BRANDED CREDIT CARD (VISA)</h1>
+                                    </td>
+                                    <td>
+                                        <h1>BASIS-BRAC BANK CO-BRANDED CREDIT CARD (VISA)</h1>
+                                    </td>
+                                    <td>
+                                        <h1>BASIS-BRAC BANK CO-BRANDED CREDIT CARD (VISA)</h1>
+                                    </td>
+                                </tr>
+                                <tr height="85">
+                                    <td>
+                                        <h1>BASIS-BRAC BANK CO-BRANDED CREDIT CARD (VISA)</h1>
+                                    </td>
+                                    <td>
+                                        <h1>BASIS-BRAC BANK CO-BRANDED CREDIT CARD (VISA)</h1>
+                                    </td>
+                                    <td>
+                                        <h1>BASIS-BRAC BANK CO-BRANDED CREDIT CARD (VISA)</h1>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+            </td>
         </tr>
 
 
